<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPG Tracker</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MPG Tracker</string>
    <string name="current_car"></string>
    <string name="no_current_car">No Current Car</string>
    <string name="button_fillup">Add Fill-Up</string>
    <string name="button_carlist">Car List</string>
    <string name="new_car_name">New Car Name</string>
    <string name="button_create_new_car">Create Car</string>
    <string name="create_account">New Account</string>
    <string name="login">Login</string>
    <string name="title_activity_new_car">Add New Car</string>
    <string name="title_activity_add_fill_up">Add Fill Up</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_car_list">Cars</string>
    <string name="title_car_detail">Car Detail</string>
    <string name="car_name">Car Name</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="current_total_mileage">Current Total Mileage</string>
    <string name="button_delete_all">Delete All Cars</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>