<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/current_car"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/current_car"
            android:hint="@string/no_current_car"/>
    </LinearLayout>
        
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <Button
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_fillup"
	        android:onClick="newFillUp" />
	    <Button
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_carlist" />
    </LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		<EditText android:id="@+id/new_car"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/new_car_name" />
		
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_create_new_car"
		    android:onClick="newCar"/>

    </LinearLayout>
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		
		<Button
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/login"
		    android:onClick="login"/>

    </LinearLayout>
    

	
</LinearLayout>
